--- a/Mentaru/encuesta.html
+++ b/Mentaru/encuesta.html
@@ -116,7 +116,7 @@
                     <form id="contactForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
                             <select class="form-control-select" id="identificarse" required>
-								<option class="select-option" value="" disabled selected>Género</option>
+								<option class="select-option" value="" disabled selected>identificarse</option>
 								<option class="select-option" value="Delete data">Delete my data</option>
 								<option class="select-option" value="Show me data">Show me my data</option>
 							</select>
@@ -229,10 +229,10 @@
                     <form id="contactForm" data-toggle="validator" data-focus="false">
                         <h4 align="center"><b>Género</b></h4>
                         <div style="width: auto;" align="center">
-                            <input type="radio" style="width: auto;" id="priority-low" name="priority" value="1" />
-                            <label style="color: black; margin-right: 5rem;" for="priority-low">Si</label>
-                            <input type="radio" style="width: auto" id="priority-normal" value="2" name="priority" />
-                            <label style="color: black;" for="priority-normal">Femenino</label>
+                            <input type="radio" style="width: auto;" id="masculino" name="priority" value="1" />
+                            <label style="color: black; margin-right: 5rem;" for="masculino">Masculino</label>
+                            <input type="radio" style="width: auto" id="femenino" value="2" name="priority" />
+                            <label style="color: black;" for="femenino">Femenino</label>
                         </div>
                     </form>
                 </div>
