--- a/Mentaru/index.html
+++ b/Mentaru/index.html
@@ -150,7 +150,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Encuesta</h4>
                             <p>Da clic en empezar para comenzar la encuenta</p>
-                            <a class="btn-solid-lg page-scroll" href="#services">Empezar</a>
+                            <a class="btn-solid-lg page-scroll" href="encuesta.html">Empezar</a>
                         </div>
                     </div>
                     <!-- end of card -->
