mejoras a la interfaz

--- a/Mentaru/index.html
+++ b/Mentaru/index.html
@@ -103,7 +103,7 @@
         <div class="header-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="text-container">
                             <h1><span class="turquoise">Mentaru</span><br>Información 100% Confiable</h1>
                             <p class="p-large">Mentaru es una app que te mantendrá informado acerca de las estadísticas sobre el Covid-19 en Honduras</p>
@@ -112,9 +112,9 @@
                         <!-- end of text-container -->
                     </div>
                     <!-- end of col -->
-                    <div class="col-lg-2" style="align-self: center;">
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6" style="align-self: center;">
                         <div class="image-container">
-                            <img style="width: 550%; height: fit-content;" src="images/img-landing.png" alt="alternative">
+                            <img class="img-fluid" style="max-width: 115%; height: 25rem;" src="images/img-landing.png" alt="alternative">
                         </div>
                         <!-- end of image-container -->
                     </div>
@@ -133,7 +133,7 @@
     <div id="encuesta" class="cards-1">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <h2>Encuesta</h2>
                     <p class="p-heading p-large">La encuesta sirve para recopilar datos que una vez procesados podrán brindar información real y de calidad para que las personas conozcan la verdadera situación en el país</p>
                 </div>
@@ -141,11 +141,11 @@
             </div>
             <!-- end of row -->
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <!-- Card -->
-                    <div class="card">
+                    <div class="card col-sm-12 col-md-12 col-lg-12 col-xl-12">
                         <p>
-                            <img class="card-image" src="images/icono-encuesta.jpg" alt="alternative">
+                            <img class="card-image img-fluid" style="max-width: 100%; height: auto;" src="images/icono-encuesta.jpg" alt="alternative">
                         </p>
                         <div class="card-body">
                             <h4 class="card-title">Encuesta</h4>
@@ -172,7 +172,7 @@
     <div id="estadistica" class="basic-1">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="text-container">
                         <h2>Estadísticas del Covid-19 en Honduras</h2>
                         <p>Podrás conocer a cerca de los datos que se manejan sobre el Covid-19 en todo el territorio Hondureño.</p>
@@ -181,9 +181,9 @@
                     <!-- end of text-container -->
                 </div>
                 <!-- end of col -->
-                <div class="col-lg-6">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="image-container">
-                        <img style="width: 35rem; height: 35rem; padding-left: 5rem;" src="images/grafico-pastel-personas.png" alt="alternative">
+                        <img class="img-fluid" style="max-width: 100%; height: auto;" src="images/grafico-pastel-personas.png" alt="alternative">
                     </div>
                     <!-- end of image-container -->
                 </div>
@@ -201,18 +201,18 @@
     <div id="estadistica" class="basic-2">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="image-container">
-                        <img style="width: 100%;" src="images/grafico-circular-personas.png" alt="alternative">
+                        <img class="img-fluid" style="max-width: 100%; height: auto;" src="images/grafico-circular-personas.png" alt="alternative">
                     </div>
                     <!-- end of image-container -->
                 </div>
                 <!-- end of col -->
-                <div class="col-lg-6">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="text-container">
                         <h2>Estadísticas del Covid-19 de la aplicación</h2>
                         <p>Podrás conocer a cerca de los datos que se han recopilado en la aplicación, teniendo gráficas con datos fiables.</p>
-                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-2">Ver Gráficas</a>
+                        <a class="btn-solid-reg popup-with-move-anim">Ver Gráficas</a>
                     </div>
                     <!-- end of text-container -->
                 </div>
@@ -229,7 +229,7 @@
     <div id="about" class="basic-4">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <h2>Nuestro Equipo</h2>
                     <p class="p-heading p-large">Conoce al equipo que realizó la aplicación.</p>
                 </div>
@@ -237,7 +237,7 @@
             </div>
             <!-- end of row -->
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
                     <!-- Team Member -->
                     <div class="team-member">
@@ -385,7 +385,7 @@
     <div class="copyright">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <p class="p-small">Copyright © 2020 <a>Mentaru</a> - All rights reserved</p>
                 </div>
                 <!-- end of col -->
