SERVER: Hice lo que pude

--- a/Mentaru/encuesta.html
+++ b/Mentaru/encuesta.html
@@ -165,7 +165,7 @@
                     <form id="contactForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
                             <input type="text" class="form-control-input" id="info_txtNombres" required>
-                            <label class="label-control" for="info_txtNombres">Nombres</label>
+                            <label class="label-control" for="info_txtNombres" id="info_lblNombres">Nombres</label>
                             <div class="help-block with-errors"></div>
                         </div>
                     </form>
@@ -174,7 +174,7 @@
                     <form id="contactForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
                             <input type="text" class="form-control-input" id="info_txtApellidos" required>
-                            <label class="label-control" for="info_txtApellidos">Apelllidos</label>
+                            <label class="label-control" for="info_txtApellidos" id="info_lblApellidos">Apelllidos</label>
                             <div class="help-block with-errors"></div>
                         </div>
                     </form>
@@ -182,8 +182,8 @@
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <form id="contactForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
-                            <input type="text" class="form-control-input" id="infor_txtIdentidad" required>
-                            <label class="label-control" for="infor_txtIdentidad">Número de Identidad</label>
+                            <input type="text" class="form-control-input" id="info_txtIdentidad" required>
+                            <label class="label-control" for="info_txtIdentidad" id="info_lblIdentidad">Número de Identidad</label>
                             <div class="help-block with-errors"></div>
                         </div>
                     </form>
@@ -191,8 +191,8 @@
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <form id="contactForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
-                            <input type="text" class="form-control-input" id="infor_txtTelefono" required>
-                            <label class="label-control" for="infor_txtTelefono">Número de Teléfono</label>
+                            <input type="text" class="form-control-input" id="info_txtTelefono" required>
+                            <label class="label-control" for="info_txtTelefono" id="info_lblTelefono">Número de Teléfono</label>
                             <div class="help-block with-errors"></div>
                         </div>
                     </form>
@@ -200,8 +200,8 @@
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <form id="contactForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
-                            <input type="number" class="form-control-input" id="infor_txtEdad" required>
-                            <label class="label-control" for="infor_txtEdad">Edad</label>
+                            <input type="number" class="form-control-input" id="info_txtEdad" required>
+                            <label class="label-control" for="info_txtEdad" id="info_lblEdad">Edad</label>
                             <div class="help-block with-errors"></div>
                         </div>
                     </form>
